correct letter spacing

--- a/footer.css
+++ b/footer.css
@@ -67,7 +67,7 @@
     font-family: 'Josefin Sans', sans-serif;
     font-size: 2rem;
     font-weight: 400;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1em;
     line-height: 3rem;
 }
 
